--- a/_posts/2019-07-13-Markdown基本使用.md
+++ b/_posts/2019-07-13-Markdown基本使用.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Markdown基本使用
-date: 2019-7-13 
-tags: 工具 Markdown
+title: "Markdown基本使用"
+date: 2019-07-13 
+tags: Markdown
 ---
 
-#Markdown
+###Markdown
 ---
 
 ##目录
@@ -103,7 +103,7 @@ ___粗斜体文本___
 *****
 - - -
 ----------
-</br>
+<br>
 
 ---
 
