--- a/source/_posts/快速幂和矩阵快速幂.md
+++ b/source/_posts/快速幂和矩阵快速幂.md
@@ -1,4 +1,4 @@
-﻿---
+---
 title: 快速幂和矩阵快速幂
 date: 2019-07-16 13:27:23
 mathjax: true
@@ -10,6 +10,7 @@ categories:
 	- 算法
 cover: static/images/jzksm/cover.png
 ---
+
 
 <u>！！！有个bug，数学公式刷新页面后才显示！！！</u>
 
@@ -133,11 +134,11 @@ f\left( n \right) =f\left( n-1 \right) +\text{5*}f\left( n-2 \right) +f\left( n-
 $$
 第一步：根据
 $$
-F\left( n \right) *T=F\left( n-1 \right)
+F\left( n \right) = T*F\left( n-1 \right)
 $$
 即
 $$
-\left[ f\left( n \right) ,f\left( n-1 \right) ,f\left( n-2 \right) ,f\left( n-3 \right) \right] *T=\left[ f\left( n-1 \right) ,f\left( n-2 \right) ,f\left( n-3 \right) ,f\left( n-4 \right) \right]
+\left[ f\left( n \right) ,f\left( n-1 \right) ,f\left( n-2 \right) ,f\left( n-3 \right) \right] =T* \left[ f\left( n-1 \right) ,f\left( n-2 \right) ,f\left( n-3 \right) ,f\left( n-4 \right) \right]
 $$
 写出转移矩阵 *T*
 
@@ -190,10 +191,10 @@ $$
 依次类推得
 $$
 T=\left[ \begin{array}{c}
-	\text{1 1 0 }0\\
-	\text{5 0 1 }0\\
-	\text{1 0 0 }0\\
-	-\text{1 0 0 }0\\
+	\text{1 1 0 0}\\
+	\text{5 0 1 0}\\
+	\text{1 0 0 1}\\
+	-\text{1 0 0 0}\\
 \end{array} \right]
 $$
 第二步：算出前n项，n为矩阵阶数
@@ -201,11 +202,11 @@ $$
 置初始矩阵init为
 $$
 \left[ \begin{array}{c}
-	f\left( 1 \right) \,\,f\left( 2 \right) \,\,f\left( 3 \right) \,\,f\left( 4 \right)\\
+	f\left( 4 \right) \,\,f\left( 3 \right) \,\,f\left( 2 \right) \,\,f\left( 1 \right)\\
 	\text{0 0 0 }0\\
 	\text{1 0 0 }0\\
 	-\text{1 0 0 }0\\
-\end{array} \right] 
+\end{array} \right]
 $$
 第三步：求第x项
 
