--- a/source/_posts/线段树模版.md
+++ b/source/_posts/线段树模版.md
@@ -10,9 +10,13 @@ cover: static/images/line_segment_tree/cover.jpeg
 
 #### 建树
 
-1.先定义一个结构体以便每个节点能存东西
+1.先定义全局变量和一个结构体以便每个节点能存东西
 
 ```c++
+int x;//单点
+int v;//单点更改的值
+int a,b;//区间
+int t;//区间更改的值
 struct node
 {
     int l;//区间左端点
@@ -24,7 +28,7 @@ struct node
 2.递归建树
 
 ```c++
-void build(int k,int l,int r)//建树 
+inline void build(int k,int l,int r)//建树 
 {
     tree[k].l=l,tree[k].r=r;
     if(tree[k].l==tree[k].r)                   //递到叶子节点的时候归
@@ -44,7 +48,7 @@ void build(int k,int l,int r)//建树
 向上更新
 
 ```c++
-void pushup(int k)
+inline void pushup(int k)
 {
     tree[k].w=tree[k*2].w+tree[k*2+1].w;    //父亲的值根据其子孙的值确定
 }
@@ -53,7 +57,7 @@ void pushup(int k)
 向下更新
 
 ```c++
-void pushdown(int k)
+inline void pushdown(int k)
 {
     tree[k*2].f+=tree[k].f;                                      //将更改的单位值传递给左儿子
     tree[k*2+1].f+=tree[k].f;                                    //将更改的单位值传递给右儿子
@@ -66,7 +70,7 @@ void pushdown(int k)
 单点查询
 
 ```c++
-void ask_point(int k,int x)
+inline void ask_point(int k)
 {
     if(tree[k].l==tree[k].r)                 //当查到叶子节点时
     {    
@@ -83,7 +87,7 @@ void ask_point(int k,int x)
 单点更新
 
 ```c++
-void change_point(int k,int x,int v)
+inline void change_point(int k)
 {
     if(tree[k].l==tree[k].r)
     {
@@ -101,7 +105,7 @@ void change_point(int k,int x,int v)
 区间查询
 
 ```c++
-void ask_interval(int k,int a,int b)
+inline void ask_interval(int k)
 {
     if(tree[k].l>=a&&tree[k].r<=b)                 //区间在a,b之间
     {
@@ -115,15 +119,15 @@ void ask_interval(int k,int a,int b)
 }
 ```
 
-区间更新（未解释懒标记）
+区间更新
 
 ```c++
-void change_interval(int k)
+inline void change_interval(int k)
 {
     if(tree[k].l>=a&&tree[k].r<=b)
     {
-        tree[k].w+=(tree[k].r-tree[k].l+1)*y;
-        tree[k].f+=y;
+        tree[k].w+=(tree[k].r-tree[k].l+1)*t;
+        tree[k].f+=t;
         return;
     }
     if(tree[k].f) pushdown(k);
