--- a/themes/Sakura/languages/zh-cn.yml
+++ b/themes/Sakura/languages/zh-cn.yml
@@ -49,6 +49,10 @@ insight:
     zh: 生活
     en: live
     img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/writing.jpg
+随想:
+    zh: 随想
+    en: Just Thinking
+    img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/writing.jpg
 
 #tag
 悦读:
